<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:paddingBottom="50dp">

        <ImageView
            android:id="@+id/logoView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/full_logo_vertical_transparent" />

        <View
            android:id="@+id/constellation_horizontal_line_top"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/logoView"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"/>

        <TextView
            android:id="@+id/constellation_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constellation_horizontal_line_top"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/constellation_grid_title"
            android:textStyle="bold"
            android:textColor="@color/ap_charcoal"
            />

        <View
            android:id="@+id/constellation_horizontal_line_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/constellation_title"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="4dp"/>

        <GridLayout
            android:id="@+id/constellation_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:columnCount="3"
            android:orientation="horizontal"
            android:rowCount="1"
            app:layout_constraintTop_toBottomOf="@id/constellation_horizontal_line_bottom">

            <TextView
                android:id="@+id/constellation_name"
                android:layout_width="@dimen/name_column_width"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:text=""
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/visible"
                android:layout_width="@dimen/item_column_width"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:text="Visible"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/used"
                android:layout_width="@dimen/item_column_width"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="0"
                android:text="Used"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

        </GridLayout>

        <View
            android:id="@+id/pose_horizontal_line_top"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/constellation_list"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="48dp"/>

        <TextView
            android:id="@+id/pose_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pose_horizontal_line_top"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/pose_title"
            android:textColor="@color/ap_charcoal"
            android:textStyle="bold"
            />

        <View
            android:id="@+id/pose_horizontal_line_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/pose_title"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="4dp"/>

        <GridLayout
            android:id="@+id/pose_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:columnCount="5"
            android:orientation="horizontal"
            android:rowCount="1"
            app:layout_constraintTop_toBottomOf="@id/pose_horizontal_line_bottom">

            <TextView
                android:id="@+id/calculation_module_name"
                android:layout_width="@dimen/name_column_width"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="0"
                android:text=""
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/lat"
                android:layout_width="@dimen/item_column_width"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:text="Lat"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lon"
                android:layout_width="@dimen/item_column_width"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="0"
                android:text="Lon"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/alt"
                android:layout_width="@dimen/item_column_width"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_row="0"
                android:text="Alt"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/clock_bias"
                android:layout_width="@dimen/item_column_width"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_row="0"
                android:text="C. bias"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textStyle="bold" />

        </GridLayout>

        <TextView
            android:id="@+id/contribution_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/pose_list"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/support_text"
            android:textColor="@color/ap_light_gray"
            android:textSize="10sp"
            android:textAlignment="center"
            android:layout_marginTop="48dp"/>

        <TextView
            android:id="@+id/developer_version_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/contribution_text"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/developer_version"
            android:textColor="@color/ap_light_gray"
            android:textSize="10sp"
            android:textAlignment="center"
            android:layout_marginTop="24dp"/>


    </android.support.constraint.ConstraintLayout>
</ScrollView>
